# amazons

./: .gitignore  README.md  pyproject.toml  setup.py
amazons_env/: __init__.py  amazons.py  amazons_env.py
gui/: CMakeLists.txt  mainwindow.hpp
scripts/: draft.py  test_env.py
src/: CMakeLists.txt  core.cpp  core.h  main.cpp
src/core/: CMakeLists.txt  core.cpp  core.h  core.hpp  main.cpp
src/gui/: main.cpp  mainwindow.cpp
