[build-system]
requires = ["setuptools>=42", "wheel", "pybind11~=2.6.1"]
build-backend = "setuptools.build_meta"

[project]
name = "amazons"
version = "0.0.0"
authors = [{ name = "Sicheng He", email = "hesicheng20@gmail.com" }]
description = "The Game of the Amazons"
readme = "README.md"
dependencies = ['numpy', 'pettingzoo']


# [project.optional-dependencies]
# test = ["pytest"]
# gui = ["PyQt5"]

[project.urls]
Repository = "https://github.com/hesic73/amazons.git"
